# Yappl

./: .gitignore  Yappl_hardware_software_design_notes.md  platformio.ini
assets/bitmaps/: README.md
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py  memory.py  memory_files.py  period_summaries.py  provider_config.py  session_store.py  settings.py  summarization.py  transcription.py
backend/app/web/: app.js  index.html  styles.css
backend/tests/: test_memory.py  test_period_summaries.py  test_session_api.py  test_summarization.py  test_transcription.py
docs/: backend.md  project_plan.md  roadmap.md  rtos_archi.md  system_explainer.md  vision.md
docs/prompts/: behaviore.txt
include/: secrets.example.h
include/app/: app_state.h  config.h  output_patterns.h  state_controller.h  yappl_app.h
include/assets/: face_animations.h  face_bitmaps.h
include/drivers/: button.h  inmp441_microphone.h  max98357a_amp.h  oled_display.h  photoresistor.h  piezo_buzzer.h  status_led.h
include/network/: backend_client.h  time_sync.h  wifi_manager.h
include/services/: act_player.h  led_breather.h  piezo_scale_player.h
include/storage/: yap_history_store.h
scripts/: generate_face_assets.py  mic_live_graph.py  mic_live_graph.sh  mic_raw_stream.sh  sync_memory_files.py  view_memory.py
src/: main.cpp
src/app/: output_patterns.cpp  state_controller.cpp  yappl_app.cpp
src/assets/: face_animations.cpp  face_bitmaps.cpp
src/drivers/: button.cpp  inmp441_microphone.cpp  max98357a_amp.cpp  (+4 more)
(+8 files in other folders)
